# Organic-namer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  format.bat  imgui.ini  old.clang-format  template.html
.github/workflows/: cmake.yml
res/shaders/: basic.frag  basic.vert  circle.frag  circle.vert  line.frag  line.vert  quad.frag  quad.vert  screen.frag  screen.vert  text.frag  text.vert
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Circle.cpp  Circle.h  Common.h  Config.h  Constants.h  Layout.cpp  Layout.h  Main.cpp  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  WindowData.h  user_imgui_config.h
src/Application/: Application.cpp  Application.h  Atom.cpp  Atom.h  Bond.cpp  Bond.h  Camera.cpp  Camera.h  Element.h  FunctionalGroup.cpp  FunctionalGroup.h  InputState.h  Namer.cpp  Namer.h  PhysicsFormatter.cpp  PhysicsFormatter.h  Scene.cpp  Scene.h  SelectionBox.cpp  SelectionBox.h  SingleAtom.cpp  SingleAtom.h
src/Graphics/: Layout.cpp  Layout.h  Screen.cpp  Shader.cpp  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  WindowData.h
src/Renderer/: Circle.cpp  Circle.h  Line.cpp  Line.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Text.cpp  Text.h  TextCircle.cpp
src/RendererInternals/: Circle.cpp  Text.cpp  TextCircle.cpp  TextCircle.h
